2012-10-04  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Bug fix for GC related errro as reported as issue 42.

	* src/RS-DBI.c
	* src/RS-PostgreSQL.c 
	* tests/dbColumnInfo.R

2012-09-18  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Keep consistency of const modifier to const char*

	* src/RS-DBI.c

2012-09-18  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Suppress message when $R_OS_TYPE is unset

	* configure
	* configure.in

2012-04-06  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	For issue 39: use a single equal sign (=) in test string comparison

	* configure
	* configure.in

2012-03-28  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Avoid connection cloning.
	Ensure that BEGIN transaction is meaningfull

	* R/PostgreSQLSupport.R
	* tests/openSendQuery.R
	* tests/dbTransactionTests.R
	* tests/openSendQuery.R	
	* man/dbCommit-methods.Rd

2012-02-27  Tomoaki NISHIYAMA  <tomoakin@staff.kanazawa-u.ac.jp>

	Suppress dbColumnInfo Segmentation fault. RS_DBI_getTypeName() 
	return "UNKNOWN" instead of NULL pointer.

	* src/RS-DBI.h
	* src/RS-DBI.c
	* tests/unknowntypes.R

2012-01-10  Tomoaki NISHIYAMA  <tomoakin@kenroku.kanazawa-u.ac.jp>

	Windows support for r-devel.
	Make libpq.a with ar directly from $(OBJ) not via dll.
	Thus, install.libs.R is no more required.

	* ChangeLog
	* DESCRIPTION
	* src/Makevars.win
	* src/install.libs.R: delete
	* src/libpq/Makefile.global.win64
	* src/libpq/Makefile.win
	* src/libpq/Makefile.shlib

2011-12-31  Tomoaki NISHIYAMA  <tomoakin@kenroku.kanazawa-u.ac.jp>

	Move conditionals from Makevars.in to configure.in and
	configure so that the GNU extension is not used.

	* ChangeLog
	* DESCRIPTION
	* configure
	* configure.in
	* src/Makevars.in

2011-12-29  Tomoaki NISHIYAMA  <tomoakin@kenroku.kanazawa-u.ac.jp>

	Prepare for release. As the last update makes many incompatibilities,
	the version number is large update.
	Remove dbBeginTransaction which is not defined in DBI.

	* ChangeLog